# konn

./: Cargo.toml
konn_desktop/: Cargo.toml
konn_desktop/src/: app.rs  main.rs
konn_desktop/src/utils/: traits.rs
konn_desktop/src/widgets/: header.rs  mod.rs  tab.rs
konn_flutter/: README.md  pubspec.yaml
konn_flutter/android/app/: build.gradle
konn_flutter/android/app/src/main/: AndroidManifest.xml
konn_flutter/android/app/src/main/kotlin/com/example/konn_flutter/: MainActivity.kt
konn_flutter/ios/Runner/: Info.plist
konn_flutter/ios/Runner.xcodeproj/: project.pbxproj
konn_flutter/lib/: main.dart
konn_flutter/linux/: CMakeLists.txt  my_application.cc
konn_flutter/macos/Runner.xcodeproj/: project.pbxproj
konn_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
konn_flutter/macos/Runner/Configs/: AppInfo.xcconfig
konn_flutter/web/: index.html  manifest.json
konn_flutter/windows/: CMakeLists.txt
konn_flutter/windows/runner/: Runner.rc  main.cpp
konn_protocol/: Cargo.toml
konn_render/: Cargo.toml
konn_render/examples/: basic.rs  basic_renderer_impl.rs
konn_render/src/: lib.rs  renderer.rs
konn_render/src/shaders/: uimaterial.fs  uimaterial.vs
konn_render/src/widgets/: button.rs  mod.rs
