[package]
name = "konn_render"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbox_render = { version = "0.1.0", default-features = false }
flatbox_core = { version = "0.1.0"}
serde = { version = "1.0.188", features = ["derive", "rc"] }
tiny-skia = "0.11.4"
typetag = "0.2.13"

[dev-dependencies]
glutin = "0.29.1"
